syntax = "proto3";

package greeter;

option go_package = "github.com/aliriazi/grpc_material/greeterpb";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

